# opall

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
sample_data/simulation_01/solver_input/: lidar_measurements.txt  poses.txt
sample_data/simulation_02/solver_input/: lidar_measurements.txt
sample_data/simulation_03/solver_input/: lidar_measurements.txt  poses.txt
sample_data/simulation_04/solver_input/: lidar_measurements.txt
src/: CMakeLists.txt
src/opall/: CMakeLists.txt  CostFunctionDataContainer.cpp  IncrementalAlignment.cpp  OptimizationDataContainer.cpp  Problem.cpp  block_covariance_computation.cpp  cost_function_data_creator.cpp  cost_function_data_id_generator.cpp  evaluators.cpp  fill_problem.cpp  full_covariance_computation.cpp  geometry.cpp  optimization_data_processor.cpp  residual_computation.cpp
src/opall/cmake/: opallConfig.cmake.in
src/opall/include/: create_ceres_solver_options.hpp  uncertainty_conversion.hpp
src/opall/include/cost_functors/: ObservedPointIn3DCostFunctor.hpp  ObservedPointIn3DFixedStationCostFunctor.hpp
src/opall/include/opall/: CostFunctionDataContainer.hpp  CostFunctionIdentifier.hpp  IncrementalAlignment.hpp  LossFunctionDescription.hpp  ModellingConfig.hpp  OptimizationConfig.hpp  OptimizationDataContainer.hpp  ParameterBlockData.hpp  Problem.hpp  SolverSummary.hpp  SparseJacobianData.hpp  block_covariance_computation.hpp  cost_function_data_creator.hpp  cost_function_data_id_generator.hpp  data_types.hpp  evaluators.hpp  fill_problem.hpp  full_covariance_computation.hpp  geometry.hpp  optimization_data_processor.hpp  residual_computation.hpp
src/opall/include/opall/cost_function_data/: CostFunctionData.hpp  ObservedPointIn3DCostFunctionData.hpp  ObservedPointIn3DFixedStationCostFunctionData.hpp
src/opall_solver_app/: CMakeLists.txt  CommandLineParameters.cpp  ConfigParser.cpp  ReportData.cpp  input_output.cpp  main.cpp
src/opall_solver_app/include/: CommandLineParameters.hpp  Config.hpp  ConfigParser.hpp  ReportConfig.hpp  ReportData.hpp  input_output.hpp
